--- a/index.html
+++ b/index.html
@@ -4,8 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
+
+    <!-- cdn for font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    This is amazon
+    <header>
+        <div class="navbar">
+            <div class="nav-logo glow-broder">
+                <div class="logo"></div>
+            </div>
+
+
+            <div class="nav-address glow-broder">
+                <p class="add-to">Delivered to</p>
+                <div class="address-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-country">India</p>
+                </div>
+            </div>
+
+            <div class="nav-scarch">
+                <select class="scarch-select">
+                    <option value="All">All</option>
+                    <option value="Mobile">Mobile</option>
+                    <option value="Cloths">Cloths</option>
+                    <option value="Furniture">Furniture</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" class="scarch-input">
+                <div class="scarch-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+
+            <div class="country glow-broder">
+                <i class="fa-solid fa-map"></i>
+                <p class="country-name">IN</p>
+            </div>
+
+            <div class="nav-sighin glow-broder">
+                <p><span>Hello, Sign In</span></p>
+                <p class="signin">Account & List</p>
+            </div>
+
+            <div class="nav-sighin glow-broder">
+                <p><span>Returns</span></p>
+                <p class="signin">& Orders</p>
+            </div>
+
+            <div class="nav-cart glow-broder">
+                <i class="fa-solid fa-cart-shopping cart-logo"></i>
+                <p class="cart-text">Cart</p>
+            </div>
+
+        </div>
+
+        
+    </header>
+    
 </body>
 </html>
