--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
         </div>
 
         <div class="panel">
-            <div class="panel- glow-broder">
+            <div class="panel-logo glow-broder">
+                <a>
                 <i class="fa-solid fa-bars"></i>
                 <span>All</span>
+                </a>
             </div>
 
             <div class="panel-list">
-                <p class="glow-broder">Today's Deals</p>
-                <p class="glow-broder">Buy Again</p>
-                <p class="glow-broder">Customer Service</p>
-                <p class="glow-broder">Registry</p>
-                <p class="glow-broder">Gift Cards</p>
-                <p class="glow-broder">Sell</p>
+                <p><a>Today's Deals</a></p>
+                <p><a>Buy Again</a></p>
+                <p><a>Customer Service</a></p>
+                <p><a>Registry</a></p>
+                <p><a>Gift Cards</a></p>
+                <p><a>Sell</a></p>
             </div>
         </div>
 
@@ -89,56 +91,56 @@
             <div class="box-content">
                 <h3>Health & Personal Care</h3>
                 <div class="box-img" style="background-image: url('/images/Health_care.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Animal care</h3>
                 <div class="box-img" style="background-image: url('/images/amimal.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Beauty picks</h3>
                 <div class="box-img" style="background-image: url('/images/beauty.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Computers & Accessories</h3>
                 <div class="box-img" style="background-image: url('/images/computer.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Furniture</h3>
                 <div class="box-img" style="background-image: url('/images/furniture.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Clothes</h3>
                 <div class="box-img" style="background-image: url('/images/model.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Mobiles</h3>
                 <div class="box-img" style="background-image: url('/images/Mobile.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Stationary</h3>
                 <div class="box-img" style="background-image: url('/images/Stationary.jpg');"></div>
-                <p>see more</p>
+                <p><a>see more</a></p>
             </div>
         </div>
     </div>
